Contact spacing fixes

--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@
 
                 .reveal{
                     position: relative;
-                    transform: translateY(150px);
+                    transform: translateY(100px);
                     opacity: 0;
                     transition: 2s all ease;
                   }
